sec 5: combine the array fusion/implementing array fusion sections

--- a/sections/01-introduction.tex
+++ b/sections/01-introduction.tex
@@ -81,8 +81,7 @@ In summary, our main contributions are the following:
         including a novel approach to array fusion % as well as scalar simplifications
         (Sections~\ref{sec:manipulating_embedded_programs},
         \ref{sec:cse},
-        \ref{sec:array_fusion},
-        \ref{sec:implementing_array_fusion}, \&
+        \ref{sec:array_fusion}, \&
         \ref{sec:simplification}).
 
     \item Benchmarks assessing runtime code generation overheads and kernel
